<resources>
    <string name="app_name">UTS</string>
    <string name="top_icon">TOP ICON</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="lokasi">geo:-6.932568, 111.370820</string>
    <string name="text1">Batik Kultur Shirt -Men\'s Shirt - Remekan Creme, Lengan Pendek</string>
    <string name="text2">Batik Kultur Tops - Buttoned V-Neck Puff Tops - Quilt Blue</string>
    <string name="text3">Batik Kultur Dress - Cowl Neck Tulip Sleeved Dress - Lilium Flowers</string>
    <string name="text4">Batik Kultur Dress - Square Neck Belted Midi Dress - Twin Butterfly</string>
    <string name="text5">Batik Couple Kebaya</string>
    <string name="text6">Batik Kultur Shirt -Men\'s Shirt - DuaKakaTua, Lengan Pendek</string>
    <string name="desc1">Material : Batik Full Tulis \nLining : None \nModelled Collar : Regular Collar \n✔ Customizable Sleeve and Body Length - simply send us an Inbox ☺</string>
    <string name="desc2">A semi-formal tops that incorporates V-Necklined, Puffed Sleeve and Buttons Detailing.\nMaterial : Premium Brocade, Cotton\nFitting : Semi Fitted, Cropped\nOpening : Front Buttons\nLining : Full Cotton Lining \n✔ Customizable Sleeve and Body Length - simply send us an Inbox ☺</string>
    <string name="desc3">A figure flattering cowl neckline dress adorned with tulip sleeve detailing.\nMaterial : Batik Full Tulis\nFittings : Fit and Flare\nOpening : Back Invisible Zipper\nLining : Partial Tricot Lining \n✔ Customizable Sleeve and Body Length - simply send us an Inbox ☺</string>
    <string name="desc4">Be the spotlight of the night! A stunning combination of Twin Butterfly arrangement and squared necklined.\nMaterial : Batik Full Tulis, Brocade\nFittings : Semi Fitted\nOpening : Invisible Back Zipper\nLining : Partial Tricot Lining \n✔ Customizable Sleeve and Body Length - simply send us an Inbox ☺</string>
    <string name="desc5">Harga tercantum untuk satu set kemeja pria dan setelan wanita ( atasan dan rok)\nFree selendang\n\nKebaya bahan brokat full furing mix roberto\nAtasan all size - + 100 - 104 cm\n\nRok batik katun halus pinggang karet\nPanjang rok - + 100 cm\n\nTampil lebih mempesona bersama pasangan anda\nNyaman dan adem dipakai\nHigh quality fashion modern\nBisa di kenakan untuk acara resmi kondangan dan tunangan\nSerta berbagai acara lainnya</string>
    <string name="desc6">Material : Batik Full Tulis \nLining : None \nModelled Collar : Regular Collar \n✔ Customizable Sleeve and Body Length - simply send us an Inbox ☺</string>
    <string name="harga1">Rp 250.000</string>
    <string name="harga2">Rp 300.000</string>
    <string name="harga3">Rp 350.000</string>
    <string name="harga4">Rp 380.000</string>
    <string name="harga5">Rp 600.000</string>
    <string name="harga6">Rp 250.000</string>
</resources>