<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_search"
                android:gravity="left|center_vertical"
                android:text="Cari produk..."
                android:textAllCaps="false"
                android:layout_marginRight="15dp"
                android:textColor="#777C75"/>

            <Button
                android:id="@+id/user"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:onClick="user"
                android:clickable="true"
                android:paddingLeft="4dp"
                app:icon="@drawable/ic_user_set" />

            <Button
                android:layout_width="32dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                app:icon="@drawable/ic_menu"
                android:onClick="popup"
                android:clickable="true"
                android:paddingLeft="2dp"
                android:layout_marginRight="10dp"
                style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:background="@drawable/wave"/>
    <LinearLayout
        android:layout_marginTop="-120dp"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="18dp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/slider">

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:sliderAnimationDuration="250"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderScrollTimeInSec="5"
            app:sliderStartAutoCycle="true">
        </com.smarteist.autoimageslider.SliderView>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:columnOrderPreserved="false"
                android:rowCount="1">
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:backgroundTint="#C8E3D4"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:src="@drawable/p1"
                            android:id="@+id/btn1"
                            android:clickable="true"/>

                        <TextView
                            android:id="@+id/text_detail1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:text="@string/text1"
                            android:textAlignment="center"
                            android:textColor="#000"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Rp 250.000"
                            android:textColor="#000"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:backgroundTint="#C8E3D4"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:src="@drawable/p2"
                            android:id="@+id/btn2"
                            android:clickable="true"/>

                        <TextView
                            android:id="@+id/text_detail2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:text="@string/text2"
                            android:textAlignment="center"
                            android:textColor="#000"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Rp 300.000"
                            android:textColor="#000"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:backgroundTint="#C8E3D4"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:src="@drawable/p3"
                            android:id="@+id/btn3"
                            android:clickable="true" />

                        <TextView
                            android:id="@+id/text_detail3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text3"
                            android:textAlignment="center"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:clickable="true"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Rp 350.000"
                            android:textColor="#000"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:backgroundTint="#C8E3D4"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    android:clickable="true"
                    app:cardUseCompatPadding="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">
                        <ImageView
                            android:clickable="true"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:id="@+id/btn4"
                            android:src="@drawable/p4" />

                        <TextView
                            android:id="@+id/text_detail4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text4"
                            android:textAlignment="center"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:clickable="true"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Rp 380.000"
                            android:textColor="#000"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:backgroundTint="#C8E3D4"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:src="@drawable/p5"
                            android:id="@+id/btn5"
                            android:clickable="true"/>

                        <TextView
                            android:id="@+id/text_detail5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="13dp"
                            android:text="@string/text5"
                            android:textAlignment="center"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:clickable="true"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Rp 600.000"
                            android:textColor="#000"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:backgroundTint="#C8E3D4"
                    app:cardCornerRadius="5dp"
                    android:id="@+id/btn6"
                    android:clickable="true"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:src="@drawable/p6"/>

                        <TextView
                            android:id="@+id/text_detail6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text6"
                            android:textAlignment="center"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:clickable="true"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Rp 250.000"
                            android:textColor="#000"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </GridLayout>
            <TextView
                android:id="@+id/totalid"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/round_bg"
                app:backgroundTint="#6B7AA1"
                android:gravity="center"
                android:text="Total :"
                android:onClick="totalBayar"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/reset"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/round_bg"
                app:backgroundTint="#fd5d5d"
                android:gravity="center"
                android:text="Reset"
                android:onClick="reset"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>